--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,3 @@
 <resources>
-    <string name="app_name">Streaming_App</string>
+    <string name="app_name">UK TV &amp; Radio</string>
 </resources>
