--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,20 @@
 <resources>
     <string name="app_name">UK TV &amp; Radio</string>
+    <string name="uk_tv_radio">UK TV and Radio</string>
+    <string name="favorites">Favorites</string>
+    <string name="settings">Settings</string>
+    <string name="help">Help</string>
+    <string name="policy_terms">Policy/Terms</string>
+    <string name="more_apps">More Apps</string>
+    <string name="rate_us">Rate Us!</string>
+    <string name="report">Report</string>
+    <string name="live_tv_channels">Live TV Channels</string>
+    <string name="live_radio">Live Radio</string>
+    <string name="application_language">Application Language</string>
+    <string name="button_help_text">Button Help Text</string>
+    <string name="my_sleep_timer">My Sleep Timer</string>
+    <string name="my_time_zone">My Time Zone</string>
+    <string name="my_current_time">My Current Time</string>
+    <string name="time_format">Time Format</string>
+    <string name="save_changes">SAVE CHANGES</string>
 </resources>
